--- a/priv-dl.yml
+++ b/priv-dl.yml
@@ -45,9 +45,9 @@ dependencies:
     - idna==3.3
     - importlib-metadata==4.12.0
     - importlib-resources==5.9.0
-    - jax==0.3.16
-    - jaxlib==0.3.15+cuda11.cudnn805
-    - jaxline==0.0.6
+#    - jax==0.3.16
+#    - jaxlib==0.3.15+cuda11.cudnn805
+#    - jaxline==0.0.6
     - jmp==0.0.2
     - keras==2.9.0
     - keras-preprocessing==1.1.2
